[package]
name = "bd-arg-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
once_cell = "1.16.0"
platform-dirs = "0.3.0"
raylib = "3.7.0"
rust-embed = "6.4.2"
serde = { version = "1.0.147", features = ["derive"] }
serde_yaml = "0.9"
